--- a/MainModule/build.gradle
+++ b/MainModule/build.gradle
@@ -70,8 +70,8 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:1.1.1"
 
     /*navigation*/
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha11"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha11"
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
 
     /*date picker*/
     implementation 'com.code-troopers.betterpickers:library:3.1.0'
@@ -84,4 +84,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.16'
+    kaptTest 'com.google.dagger:dagger-compiler:2.16'
 }
